correções conflito em pesquisa por genero e adição da rota genero
